solved overflow problem in the translator section

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -141,3 +141,7 @@ span.mdc-tab__text-label {
   color: rgb(238, 238, 238) !important;
   font-weight: 400;
 }
+
+.mdc-tab {
+  padding: 0px !important;
+}
